--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <p>安卓版：</p>
-<h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="下载" target="_blank">下载安装</a> </h2>
+<h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官方下载" target="_blank">官方下载</a> </h2>
 
 <p>苹果版：</p>
 
