--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
+<html><head></head>
+  <body>
+<h2>P中P</h2>
+
+<blockquote>
+  <p>在系统浏览器中打开此页面，下载安装本应用</p>
+</blockquote>
 
 <p>安卓版：</p>
-<h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官方下载" target="_blank">官方下载</a> </h2>
+<h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">下载安装</a> </h2>
 
 <p>苹果版：</p>
 
 <ul><li><p>敬请期待</p></li>
 </ul>
 
+<h2 id="P中P的原则">P中P的原则：</h2>
+
+<ul><li><p>P中P永久免费，一键使用</p></li>
+<li><p>P中P配合QQ浏览器使用效果更好</p></li>
+<li><p>QQ浏览器可以将视屏发送到电视观看欧</p></li>
+<li><p>P中P所有资源均来源网络</p></li>
+<li><p>P中P中所有内容仅供学习使用</p></li>
+</ul>
+
+<p>如果您是善良的孩子。请您珍惜这份美好。</p></body></html>
