--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html><head></head>
+<html><head>
+<meta charset="UTF-8">
+	<!--防止手机页面缩放-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+
+</head>
   <body>
 <h2>P中P</h2>
 
