--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
 
 </head>
   <body>
-<h2>P中P</h2>
+<h1>在系统浏览器中打开此页面，下载安装本应用</h1>
 
-<blockquote>
-  <p>在系统浏览器中打开此页面，下载安装本应用</p>
-</blockquote>
 
 <p>安卓版：</p>
 <h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">下载安装</a> </h2>
