--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 </head>
  <body>
-<h2>在系统浏览器中打开此页面，下载安装本应用</h2>
-
+<h2>在系统浏览器中打开此页面</h2>
+	<h2>下载安装本应用</h2>
 
 <p>安卓版：</p>
 <h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">下载安装</a> </h2>
