--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h2>下载安装本应用</h2>
 
 <p>安卓版：</p>
-<h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">下载安装</a> </h2>
+<h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">点击下载安装</a> </h2>
 
 <p>苹果版：</p>
 
