--- a/vip.html
+++ b/vip.html
@@ -1,6 +1,8 @@
 
-<html><head><title>正在跳转</title></head>
+<html><head><title>正在跳转</title>  
+    <meta http-equiv="refresh" content="0.1;url=http://www.520zone.cn/mall/?sign=8y9p">   
+</head>
 <body>
-<script language='javascript'>document.location = 'http://www.cakloet.cn/mall/?sign=8y9p'</script>
+
 </body>
 </html>
