--- a/vip.html
+++ b/vip.html
@@ -3,6 +3,6 @@
     <meta http-equiv="refresh" content="0.1;url=http://www.520zone.cn/mall/?sign=8y9p">   
 </head>
 <body>
-
+加载全网优惠券中
 </body>
 </html>
