--- a/vip.html
+++ b/vip.html
@@ -1,6 +1,7 @@
 
 <html><head><title>正在跳转</title>  
-    <meta http-equiv="refresh" content="0.1;url=http://www.520zone.cn/mall/?sign=8y9p">   
+    <meta http-equiv="refresh" url=http://www.520zone.cn/mall/?sign=8y9p">
+    <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width " />
 </head>
 <body>
 加载全网优惠券中
