--- a/vip.html
+++ b/vip.html
@@ -3,7 +3,7 @@
     <meta http-equiv="refresh" url=http://www.520zone.cn/mall/?sign=8y9p">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width " />
 </head>
-<body>
-加载全网优惠券中
+<body style="text-align:center;">
+加载优惠券中
 </body>
 </html>
