--- a/vip.html
+++ b/vip.html
@@ -1,9 +1,7 @@
 
 <html><head><title>正在跳转</title>  
     <meta http-equiv="refresh" url=http://www.520zone.cn/mall/?sign=8y9p">
-    <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width " />
 </head>
-<body style="text-align:center;">
-加载优惠券中
+<body>
 </body>
 </html>
