--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 <ul><li><p>敬请期待</p></li>
 </ul>
 
-<h2 id="P中P的原则">P中P的原则：</h2>
+<h2 id="P中P简介">P中P简介：</h2>
 
-<ul><li><p>P中P永久免费，一键使用</p></li>
-<li><p>P中P配合QQ浏览器使用效果更好</p></li>
-<li><p>QQ浏览器可以将视屏发送到电视观看欧</p></li>
-<li><p>P中P所有资源均来源网络</p></li>
+<ul>
+<li><p>仅2M，无需任何权限，放心下载</p></li>
+<li><p>永久免费，一键使用</p></li>
+<li><p>配合QQ浏览器使用效果更好</p></li>
+<li><p>QQ浏览器可以将视屏发送到电视观看</p></li>
 <li><p>P中P中所有内容仅供学习使用</p></li>
 </ul>
 
