--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
  <body>
 <h2>在系统浏览器中打开此页面</h2>
-	<h2>下载安装本应用</h2>
 
 <p>安卓版：</p>
 <h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">点击下载安装</a> </h2>
@@ -22,7 +21,7 @@
 <li><p>永久免费，一键使用</p></li>
 <li><p>配合QQ浏览器使用效果更好</p></li>
 <li><p>QQ浏览器可以将视屏发送到电视观看</p></li>
-<li><p>P中P中所有内容仅供学习使用</p></li>
+<li><p>本应用所有内容仅供学习使用</p></li>
 </ul>
 
 <p>如果您是善良的孩子。请您珍惜这份美好。</p></body></html>
