--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 </head>
  <body>
-<h2>在系统浏览器中打开此页面</h2>
-
+<h2>免费观看VIP视频，淘宝、京东、拼多多优惠券</h2>
+<p>若无法下载，请用系统浏览器打开</p>
 <p>安卓版：</p>
 <h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">点击下载安装</a> </h2>
 
