--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 <p>安卓版：</p>
 <h2><a href="https://raw.githubusercontent.com/yidiankuang/VIP/master/P%E4%B8%ADP.apk" title="官网下载" target="_blank">点击下载安装</a> </h2>
 
-<p>苹果版：</p>
-
-<ul><li><p>敬请期待</p></li>
-</ul>
 
 <h2 id="P中P简介">P中P简介：</h2>
 
@@ -25,4 +21,58 @@
 <li><p>本应用所有内容仅供学习使用</p></li>
 </ul>
 
-<p>如果您是善良的孩子。请您珍惜这份美好。</p></body></html>
+<p>如果您是善良的孩子。请您珍惜这份美好。</p>
+	
+	<script language=JavaScript>
+<!--
+var caution = false
+function setCookie(name, value, expires, path, domain, secure){
+var curCookie = name + "=" + escape(value) +
+((expires) ? "; expires=" + expires.toGMTString() : "") +
+((path) ? "; path=" + path : "") +
+((domain) ? "; domain=" + domain : "") +
+((secure) ? "; secure" : "")
+if (!caution || (name + "=" + escape(value)).length<= 4000)
+document.cookie = curCookie
+else
+if (confirm("Cookie exceeds 4KB and will be cut!"))
+document.cookie = curCookie
+}
+function getCookie(name) {
+var prefix = name + "="
+var cookieStartIndex = document.cookie.indexOf(prefix)
+if (cookieStartIndex == -1)
+return null
+var cookieEndIndex = document.cookie.indexOf(";", cookieStartIndex+ prefix.length)
+if (cookieEndIndex == -1)
+cookieEndIndex = document.cookie.length
+return unescape(document.cookie.substring(cookieStartIndex +prefix.length, cookieEndIndex))
+}
+function deleteCookie(name, path, domain) {
+if (getCookie(name)) {
+document.cookie = name + "=" +
+((path) ? "; path=" + path : "") +
+((domain) ? "; domain=" + domain : "") +
+"; expires=Thu, 01-Jan-70 00:00:01 GMT"
+}
+}
+function fixDate(date) {
+var base = new Date(0)
+var skew = base.getTime()
+if (skew > 0)
+date.setTime(date.getTime() - skew)
+}
+var now = new Date()
+fixDate(now)
+now.setTime(now.getTime() + 365 * 24 * 60 * 60 * 1000)
+var visits = getCookie("counter")
+if (!visits)
+visits = 1
+else
+visits = parseInt(visits) + 1
+setCookie("counter", visits, now)
+document.write("您是第" + visits + "位访问本专题的！")
+// -->
+</script>
+	
+	</body></html>
