--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
 <p>如果您是善良的孩子。请您珍惜这份美好。</p>
 	
-	<script language=JavaScript>
-<!--
+<script language=JavaScript>
 var caution = false
 function setCookie(name, value, expires, path, domain, secure){
 var curCookie = name + "=" + escape(value) +
@@ -71,8 +70,7 @@ visits = 1
 else
 visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
-document.write("您是第" + visits + "位访问本专题的！")
-// -->
+document.write(visits)
 </script>
 	
 	</body></html>
