--- a/vip.html
+++ b/vip.html
@@ -3,5 +3,15 @@
     <meta http-equiv="refresh" content="0.1;url=http://www.520zone.cn/mall/?sign=8y9p">
 </head>
 <body>
+   <script type="text/javascript">
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?58c39bdefc6ec3b74a31b444bf0574d1";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </body>
 </html>
