--- a/vip.html
+++ b/vip.html
@@ -1,6 +1,6 @@
 
 <html><head><title>正在跳转</title>  
-    <meta http-equiv="refresh" content="0.1;url=http://www.520zone.cn/mall/?sign=8y9p">
+    <meta http-equiv="refresh" content="0.1;url=http://www.ah555.cn/mall/?sign=8y9p">
 </head>
 <body>
    <script type="text/javascript">
